--- a/text/style.css
+++ b/text/style.css
@@ -1,30 +1,38 @@
 body {
-    background: linear-gradient(-45deg, #b65c41, #b3406c, #4a8499, #4da38f);
-    background-size: 500% 500%;
-    animation: gradient 15s ease infinite;
-    height: 100vh;
+  background: linear-gradient(-45deg, #b65c41, #b3406c, #4a8499, #4da38f);
+  background-size: 500% 500%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
-  
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  50% {
+    background-position: 100% 50%;
   }
-  
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
 .jumbotron {
- padding-top: 8rem;
+  padding-top: 8rem;
 }
 section {
   padding-top: 5rem;
-  
 }
-#about  {
+#about {
   padding-top: 8rem;
+}
+
+.tombol {
+  text-transform: uppercase;
+  border-radius: 40px;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
